--- a/account.html
+++ b/account.html
@@ -81,6 +81,9 @@
             <li class="nav-item">
               <a class="nav-link" href="index.html#blog">Blog</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="parents.html">Parents</a>
+            </li>
           </ul>
           <a
             href="#"
