--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="icon"
-      type="image/x-icon"
+      type="icon"
       href="https://static.wikia.nocookie.net/logopedia/images/1/16/4454C0C6-2334-41E7-AC91-D98739B8834B.png/revision/latest/scale-to-width-down/400?cb=20220426044356"
     />
 
