--- a/About Us.html
+++ b/About Us.html
@@ -1,4 +1,5 @@
-<div class="about-section">
+<body>
+    <div class="about-section">
       
     <main>
       <section class="header">
@@ -100,3 +101,5 @@ and weaknesses. To provide each student with the
 </section>
 </about-section>
 <div class="container">
+</body>
+  
