--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
             <p><i class="bx bxs-phone-call"></i> (608) 345-9598</p>
           </div>
           <div class="col-auto social-icons">
-            <a href="#"><i class="bx bxl-facebook"></i></a>
+            <a href="https://www.facebook.com/MadAreaDrivingSchool"
+              ><i class="bx bxl-facebook"></i
+            ></a>
             <a href="#"><i class="bx bxl-twitter"></i></a>
             <a href="#"><i class="bx bxl-instagram"></i></a>
             <a href="#"><i class="bx bxl-pinterest"></i></a>
@@ -541,15 +543,35 @@
                 CONGRATULATIONS YOU HAVE FOUND THE TOP DRIVING SCHOOL IN MADISON
               </p>
               <div class="col-auto social-icons">
-                <a href="#"><i class="bx bxl-facebook"></i></a>
+                <a href="https://www.facebook.com/MadAreaDrivingSchool"
+                  ><i class="bx bxl-facebook"></i
+                ></a>
                 <a href="#"><i class="bx bxl-twitter"></i></a>
                 <a href="#"><i class="bx bxl-instagram"></i></a>
                 <a href="#"><i class="bx bxl-pinterest"></i></a>
               </div>
+
               <div class="col-auto conditions-section">
-                <a href="#">privacy</a>
-                <a href="#">terms</a>
-                <a href="#">disclaimer</a>
+                <a
+                  href="https://wisconsindot.gov/pages/online-srvcs/sch-road-test/schedule.aspx"
+                  >Road Test App</a
+                >
+                <a href="https://wisconsindot.gov/Documents/formdocs/mv3001.pdf"
+                  >DL App</a
+                >
+                <a
+                  href="https://wisconsindot.gov/Documents/dmv/shared/bds126-motorists-handbook.pdf"
+                  >Motorist Handbook</a
+                >
+                <a
+                  href="https://wisconsindot.gov/Pages/dmv/teen-driver/teen-sfty/index.aspx"
+                  >DMV Teen Driver</a
+                >
+              </div>
+              <div class="col-auto conditions-section">
+                <a href="#">Privacy</a>
+                <a href="#">Terms</a>
+                <a href="#">Disclaimer</a>
               </div>
             </div>
           </div>
