--- a/parents.html
+++ b/parents.html
@@ -99,9 +99,7 @@
         <div class="row">
           <div class="col-12">
             <div class="intro service">
-              <h6>Message to Parents</h6>
               <h1 class="glow">Letter to the Parents</h1>
-              <h1>Memo</h1>
               <p class="mx-auto">
                 On behalf of the staff at Mad Area Driving School, I am happy to welcome you to the 2022-23 school
                 year! We are looking forward to a productive partnership with you to ensure our children can
@@ -207,6 +205,7 @@
         </div>
       </div>
     </section>
+
 
     <footer>
       <div class="footer-top text-center">
@@ -348,3 +347,4 @@
     <script src="js/app.js"></script>
   </body>
 </html>
+Footer
