--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
                 CONGRATULATIONS YOU HAVE FOUND THE TOP DRIVING SCHOOL IN MADISON
               </p>
               <div class="col-auto social-icons">
-                <a href="#"><i class="bx bxl-facebook"></i></a>
+                <a href="https://www.facebook.com/MadAreaDrivingSchool"><i class="bx bxl-facebook"></i></a>
                 <a href="#"><i class="bx bxl-twitter"></i></a>
                 <a href="#"><i class="bx bxl-instagram"></i></a>
                 <a href="#"><i class="bx bxl-pinterest"></i></a>
