--- a/parents.html
+++ b/parents.html
@@ -99,22 +99,20 @@
         <div class="row">
           <div class="col-12">
             <div class="intro service">
-              <h6>Message to Parents</h6>
               <h1 class="glow">Letter to the Parents</h1>
-              <h1>Memo</h1>
               <p class="mx-auto">
                 On behalf of the staff at Mad Area Driving School, I am happy to welcome you to the 2022-23 school
                 year! We are looking forward to a productive partnership with you to ensure our children can
                 achieve their highest potential. We recognize that in order to be successful in school, our
                 children need support from both the home and school. We know a strong partnership with you
-                will make a great difference in your child’s education. As partners, we share the responsibility
-                for our children’s success and want you to know that we will do our very best to carry out our
-                responsibilities. We ask that you guide and support your child’s learning by ensuring that
+                will make a great difference in your childs education. As partners, we share the responsibility
+                for our childrens success and want you to know that we will do our very best to carry out our
+                responsibilities. We ask that you guide and support your childs learning by ensuring that
                 he/she:
               </p>
               <p>I am attaching a copy of our school rules and pickup information so that you and your child can review them together. If
                 you have any questions about the rules and expectations, please feel free to contact me or to
-                discuss them with your child’s teacher. It is very important that you and your child are fully
+                discuss them with your childs teacher. It is very important that you and your child are fully
                 informed regarding standards related to appropriate behavior for a safe and productive school
                 year. Please feel free to review the School pickup information and other required information</p>
 
@@ -155,7 +153,7 @@
                 eliminate any unnecessary last minute appointment changes or
                 misses, $30.00 will be charged for each missed or unexcused
                 appointment. If an appointment is missed the $30.00 fee must be
-                paid at the student’s next lesson. Any changes in scheduled
+                paid at the students next lesson. Any changes in scheduled
                 appointments will not be considered unless made at least 48
                 hours in advance to fill the requested appointment change.
               </p>
