--- a/index.html
+++ b/index.html
@@ -542,8 +542,8 @@
               </p>
               <div class="col-auto social-icons">
                 <a href="https://www.facebook.com/MadAreaDrivingSchool"><i class="bx bxl-facebook"></i></a>
-                <a href="https://wisconsindot.gov/Pages/online-srvcs/find-dmv/default.aspx">Wisconsin DMV</a>
-                <a href="https://www.travelwisconsin.com/">TravelWisconsin</a>
+                <a href="https://wisconsindot.gov/Pages/online-srvcs/find-dmv/default.aspx">DMV</a>
+                <a href="https://www.travelwisconsin.com/">Travel</a>
               </div>
               <div class="col-auto conditions-section">
                 <a href="#">privacy</a>
