--- a/About Us.html
+++ b/About Us.html
@@ -1,4 +1,29 @@
- <body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="icon"
+      type="icon"
+      href="https://static.wikia.nocookie.net/logopedia/images/1/16/4454C0C6-2334-41E7-AC91-D98739B8834B.png/revision/latest/scale-to-width-down/400?cb=20220426044356"
+    />
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/owl.carousel.min.css" />
+    <link rel="stylesheet" href="css/owl.theme.default.min.css" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+
+    <title>Mad Area Driving School</title>
+  </head>
+
+<body>
       <div class="about-section">
         
       <main>
@@ -30,7 +55,7 @@
     <div class="header-inner">
       <h1></h1>
           <p class="second-paragraph">
-            <title>Our Story</title>
+            <h1>Our Story</h1>
            
           <h2> Mad Area Driving School is a well-renowned driving school which is conveniently located in Madison,Wi.</h2>
   <p>The school has both DPI an d DOT certified driving instructors. You can use their licensed and insured vehicle for the road skills test. They start with the basics and move through the more complex aspects of operating a motor vehicle. More advanced sessions will teach you techniques on emergency avoidance and how to prevent potential conflicts. They offer pickup and drop-off at home or work after behind-the-wheel training. Customers can get 30 hours of online classroom instruction and behind-the-wheel training at Mad Area Driving School <em>for only $570</em>!
