--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
           </div>
           <div class="col-auto social-icons">
             <a href="https://www.facebook.com/MadAreaDrivingSchool"><i class="bx bxl-facebook"></i></a>
+            <a href="https://www.facebook.com/MadAreaDrivingSchool"><i class="bx bxl-facebook"></i></a>
+            <a href="https://wisconsindot.gov/Pages/online-srvcs/find-dmv/default.aspx" class="fa fa-twitter"></i></a>
+            <a href="https://www.travelwisconsin.com/"class="fa fa-google"></a>
             
 
            
@@ -542,8 +545,8 @@
               </p>
               <div class="col-auto social-icons">
                 <a href="https://www.facebook.com/MadAreaDrivingSchool"><i class="bx bxl-facebook"></i></a>
-                <a href="https://wisconsindot.gov/Pages/online-srvcs/find-dmv/default.aspx">DMV</a>
-                <a href="https://www.travelwisconsin.com/">Travel</a>
+                <a href="https://wisconsindot.gov/Pages/online-srvcs/find-dmv/default.aspx" class="fa fa-twitter"></a>
+                <a href="https://www.travelwisconsin.com/"class="fa fa-google"></a>
               </div>
               <div class="col-auto conditions-section">
                 <a href="#">privacy</a>
