--- a/index.html
+++ b/index.html
@@ -34,12 +34,6 @@
           </div>
           <div class="col-auto social-icons">
             <a href="https://www.facebook.com/MadAreaDrivingSchool"><i class="bx bxl-facebook"></i></a>
-            <a href="https://www.facebook.com/MadAreaDrivingSchool"><i class="bx bxl-facebook"></i></a>
-            <a href="https://wisconsindot.gov/Pages/online-srvcs/find-dmv/default.aspx" class="fa fa-twitter"></i></a>
-            <a href="https://www.travelwisconsin.com/"class="fa fa-google"></a>
-            
-
-           
           </div>
         </div>
       </div>
@@ -545,8 +539,8 @@
               </p>
               <div class="col-auto social-icons">
                 <a href="https://www.facebook.com/MadAreaDrivingSchool"><i class="bx bxl-facebook"></i></a>
-                <a href="https://wisconsindot.gov/Pages/online-srvcs/find-dmv/default.aspx" class="fa fa-twitter"></a>
-                <a href="https://www.travelwisconsin.com/"class="fa fa-google"></a>
+                <a href="https://wisconsindot.gov/Pages/online-srvcs/find-dmv/default.aspx" class="fa fa-dmv">DMV</a>
+                <a href="https://www.travelwisconsin.com/"class="fa fa-travel">Travel</a>
               </div>
               <div class="col-auto conditions-section">
                 <a href="#">privacy</a>
