--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
           </div>
           <div class="col-auto social-icons">
             <a href="https://www.facebook.com/MadAreaDrivingSchool"><i class="bx bxl-facebook"></i></a>
+            <a href="https://www.youtube.com/@RoadTestSuccess/featured" class="fa fa-youtube"></a>
+            <a href="#" class="fa fa-instagram"></a>
           </div>
         </div>
       </div>
@@ -539,8 +541,8 @@
               </p>
               <div class="col-auto social-icons">
                 <a href="https://www.facebook.com/MadAreaDrivingSchool"><i class="bx bxl-facebook"></i></a>
-                <a href="https://wisconsindot.gov/Pages/online-srvcs/find-dmv/default.aspx" class="fa fa-dmv">DMV</a>
-                <a href="https://www.travelwisconsin.com/"class="fa fa-travel">Travel</a>
+                <a href="https://www.youtube.com/@RoadTestSuccess/featured" class="fa fa-youtube"></a>
+                <a href="#" class="fa fa-instagram"></a>
               </div>
               <div class="col-auto conditions-section">
                 <a href="#">privacy</a>
