--- a/index.html
+++ b/index.html
@@ -541,8 +541,8 @@
               </p>
               <div class="col-auto social-icons">
                 <a href="https://www.facebook.com/MadAreaDrivingSchool"><i class="bx bxl-facebook"></i></a>
-                <a href="https://www.youtube.com/@RoadTestSuccess/featured" class="fa fa-youtube"></a>
-                <a href="#" class="fa fa-instagram"></a>
+                <a href="https://www.youtube.com/@RoadTestSuccess/featured" class="fa fa-youtube">Test</a>
+                <a href="https://wisconsindot.gov/pages/online-srvcs/external/dmv.aspx" class="dmv">DMV</a>
               </div>
               <div class="col-auto conditions-section">
                 <a href="#">privacy</a>
