--- a/About Us.html
+++ b/About Us.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="icon"
-      type="icon"
-      href="https://static.wikia.nocookie.net/logopedia/images/1/16/4454C0C6-2334-41E7-AC91-D98739B8834B.png/revision/latest/scale-to-width-down/400?cb=20220426044356"
+      type="image/x-icon"
+      href="http://www.madareadriving.com/home_files/MADAREA.GIF"
     />
 
     <!-- Bootstrap CSS -->
@@ -20,8 +20,79 @@
     />
     <link rel="stylesheet" href="css/style.css" />
 
-    <title>Mad Area Driving School</title>
+    <title>Message to Parents</title>
   </head>
+  <body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="70">
+    <!-- TOP NAV -->
+    <div class="top-nav" id="home">
+      <div class="container">
+        <div class="row justify-content-between">
+          <div class="col-auto">
+            <p><i class="bx bxs-envelope"></i> madareadriving@gmail.com</p>
+            <p><i class="bx bxs-phone-call"></i> (608) 345-9598</p>
+          </div>
+          <div class="col-auto social-icons">
+            <a href="#"><i class="bx bxl-facebook"></i></a>
+            <a href="#"><i class="bx bxl-twitter"></i></a>
+            <a href="#"><i class="bx bxl-instagram"></i></a>
+            <a href="#"><i class="bx bxl-pinterest"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- BOTTOM NAV -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top">
+      <div class="container">
+        <a class="navbar-brand" href="index.html"
+          >Mad Area Driving<span class="dot">.</span></a
+        >
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="index.html#about">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="index.html#services">Services</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="index.html#pricing">Pricing</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="index.html#reviews">Reviews</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="index.html#blog">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="account.html">Account</a>
+            </li>
+          </ul>
+          <a
+            href="#"
+            data-bs-toggle="modal"
+            data-bs-target="#exampleModal"
+            class="btn btn-brand ms-lg-3"
+            >Contact</a
+          >
+        </div>
+      </div>
+    </nav>
 
 
 <div class="deck">
