navbar/footer update
done

--- a/index.html
+++ b/index.html
@@ -34,13 +34,15 @@
           </div>
           <div class="col-auto social-icons">
             <a href="https://www.facebook.com/MadAreaDrivingSchool"><i class="bx bxl-facebook"></i></a>
-           </div>
+            <a href="https://www.facebook.com/MadAreaDrivingSchool"><i class="bx bxl-twitter"></i></a>
+            <a href="#"><i class="bx bxl-instagram"></i></a>
+            <a href="#"><i class="bx bxl-pinterest"></i></a>
+          </div>
         </div>
       </div>
     </div>
-
-    <!-- BOTTOM NAV -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top">
+     <!-- BOTTOM NAV -->
+     <nav class="navbar navbar-expand-lg navbar-light bg-white sticky-top">
       <div class="container">
         <a class="navbar-brand" href="#"
           >Mad Area Driving<span class="dot">.</span></a
@@ -91,7 +93,6 @@
         </div>
       </div>
     </nav>
-
     <!-- SLIDER -->
     <div class="owl-carousel owl-theme hero-slider">
       <div class="slide slide1">
@@ -539,13 +540,21 @@
               </p>
               <div class="col-auto social-icons">
                 <a href="https://www.facebook.com/MadAreaDrivingSchool"><i class="bx bxl-facebook"></i></a>
-                <a href="https://www.youtube.com/@RoadTestSuccess/featured" class="fa fa-youtube">Test</a>
-                <a href="https://wisconsindot.gov/pages/online-srvcs/external/dmv.aspx" class="dmv">DMV</a>
+                <a href="#"><i class="bx bxl-twitter"></i></a>
+                <a href="#"><i class="bx bxl-instagram"></i></a>
+                <a href="#"><i class="bx bxl-pinterest"></i></a>
               </div>
               <div class="col-auto conditions-section">
-                <a href="#">privacy</a>
-                <a href="#">terms</a>
-                <a href="#">disclaimer</a>
+                <div>
+                  <a href="https://wisconsindot.gov/Documents/formdocs/mv3001.pdf"> DL APP</a>
+                  <a href="https://wisconsindot.gov/Pages/dmv/teen-driver/prnt-spnsr/psdp.aspx" > PSDP</a>
+                  <a href="https://wisconsindot.gov/Documents/dmv/shared/bds126-motorists-handbook.pdf"> Motorist Handbook</a>
+                  <a href="https://wisconsindot.gov/pages/online-srvcs/sch-road-test/schedule.aspx">Road Test</a>
+                </div>
+                
+                <a href="#">Privacy</a>
+                <a href="#">Terms</a>
+                <a href="#">Disclaimer</a>
               </div>
             </div>
           </div>
