--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
           </div>
           <div class="col-auto social-icons">
             <a href="https://www.facebook.com/MadAreaDrivingSchool"><i class="bx bxl-facebook"></i></a>
-            <a href="https://www.facebook.com/MadAreaDrivingSchool"><i class="bx bxl-twitter"></i></a>
-            <a href="#"><i class="bx bxl-instagram"></i></a>
-            <a href="#"><i class="bx bxl-pinterest"></i></a>
+                <a href="https://twitter.com/"><i class="bx bxl-twitter"></i></a>
+                <a href="https://www.instagram.com/"><i class="bx bxl-instagram"></i></a>
+                <a href="https://www.pinterest.com/"><i class="bx bxl-pinterest"></i></a>
           </div>
         </div>
       </div>
@@ -592,9 +592,9 @@
               </p>
               <div class="col-auto social-icons">
                 <a href="https://www.facebook.com/MadAreaDrivingSchool"><i class="bx bxl-facebook"></i></a>
-                <a href="#"><i class="bx bxl-twitter"></i></a>
-                <a href="#"><i class="bx bxl-instagram"></i></a>
-                <a href="#"><i class="bx bxl-pinterest"></i></a>
+                <a href="https://twitter.com/"><i class="bx bxl-twitter"></i></a>
+                <a href="https://www.instagram.com/"><i class="bx bxl-instagram"></i></a>
+                <a href="https://www.pinterest.com/"><i class="bx bxl-pinterest"></i></a>
               </div>
               <div class="col-auto conditions-section">
                 <div>
