--- a/index.html
+++ b/index.html
@@ -638,7 +638,13 @@
                     min-height: 300px;
                   "
                 >
-                  <div></div>
+                  <div>
+                    <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
+                      <form class="row g-3" action="https://formsubmit.co/bonnemamarisia71@gmail.com" method="POST" role="form" class="php-email-form">
+                        <!-- Honeypot-->
+                        <input type="text" name="_honey" style="display:none">
+          
+                  </div>
                 </div>
                 <div class="col-lg-8">
                   <form class="p-lg-5 col-12 row g-3">
