--- a/About Us.html
+++ b/About Us.html
@@ -97,14 +97,15 @@
     </nav>
 
 
-<div class="deck">
-  <div class="card-space">
-    <div class="card">
-      <div class="face front">
+    <section id="parents">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <div class="intro service">
         <h1>Mission Statement</h1>
       </div>
-      <div class="face back">
-        <p>Mad Area driving school uses years of experience 
+      <p class="mx-auto">
+        Mad Area driving school uses years of experience 
           and innovation to educate students and families alike in 
           order to save lives and reduce injuries through 
           organized curriculum, family involvement, 
@@ -112,20 +113,21 @@
            each student with the necessary information and 
           techniques to be a SAFE RESPONSIBLE DRIVER. 
           To provide a learning friendly environment that meets
-           the needs of each student’s learning style. 
-          To recognize and understand each student’s strengths 
+           the needs of each students learning style. 
+          To recognize and understand each students strengths 
           and weaknesses. To provide each student with the
-           proper training so they can obtain an Indiana driver’s license.
+           proper training so they can obtain an Indiana drivers license.
            To provide the motoring public with <strong>SAFE RESPONSIBLE DRIVERS</strong>.</p>
       </div>
     </div>
   </div>
-  <div class="card-space">
-    <div class="card">
-      <div class="face front">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="intro service">
         <h1>Our Story</h1>
       </div>
-      <div class="face back">
+      <p class="mx-auto">
         <h2> Mad Area Driving School is a well-renowned driving school which is conveniently located in Madison,Wi.</h2>
   <p>The school has both DPI an d DOT certified driving instructors. You can use their licensed and insured vehicle for the road skills test. They start with the basics and move through the more complex aspects of operating a motor vehicle. More advanced sessions will teach you techniques on emergency avoidance and how to prevent potential conflicts. They offer pickup and drop-off at home or work after behind-the-wheel training. Customers can get 30 hours of online classroom instruction and behind-the-wheel training at Mad Area Driving School <em>for only $570</em>!
   </p>
