--- a/About Us.html
+++ b/About Us.html
@@ -116,7 +116,7 @@
            the needs of each students learning style. 
           To recognize and understand each students strengths 
           and weaknesses. To provide each student with the
-           proper training so they can obtain an Indiana drivers license.
+           proper training so they can obtain an Wisconsin drivers license.
            To provide the motoring public with <strong>SAFE RESPONSIBLE DRIVERS</strong>.</p>
       </div>
     </div>
