--- a/showcase.html
+++ b/showcase.html
@@ -12,13 +12,14 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/owl.carousel.min.css" />
-    <link rel="stylesheet" href="css/owl.theme.default.min.css" />
+    <!-- <link rel="stylesheet" href="css/owl.carousel.min.css" />
+    <link rel="stylesheet" href="css/owl.theme.default.min.css" /> -->
     <link
       href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/showcase.css" />
 
     <title>Mad Area Driving School</title>
   </head>
@@ -101,7 +102,7 @@
                 <picture class="picture-media">
                     <img src="media/video/tail-lights-1241171_1280.jpg" width="575" height="322" alt="driving school" media="(max-width: 575px)" >
                 </picture>
-                <figcapture class="offscreen">Street</figcapture>
+                <!-- <figcapture class="offscreen">Street</figcapture> -->
             </figure>
             <div class="intro-content">
         <!--<div class="container">-->
