add my mission statement

--- a/index.html
+++ b/index.html
@@ -546,6 +546,7 @@
               </div>
               <div class="col-auto conditions-section">
                 <div>
+                  <a href="About Us.html" class="btn btn-outline-light ms-3">Our Mission</a>
                   <a href="https://wisconsindot.gov/Documents/formdocs/mv3001.pdf"> DL APP</a>
                   <a href="https://wisconsindot.gov/Pages/dmv/teen-driver/prnt-spnsr/psdp.aspx" > PSDP</a>
                   <a href="https://wisconsindot.gov/Documents/dmv/shared/bds126-motorists-handbook.pdf"> Motorist Handbook</a>
