--- a/About Us.html
+++ b/About Us.html
@@ -147,8 +147,9 @@
               </p>
               <div class="col-auto social-icons">
                 <a href="https://www.facebook.com/MadAreaDrivingSchool"><i class="bx bxl-facebook"></i></a>
-                <a href="https://www.youtube.com/@RoadTestSuccess/featured" class="fa fa-youtube">Test</a>
-                <a href="https://wisconsindot.gov/pages/online-srvcs/external/dmv.aspx" class="dmv">DMV</a>
+                <a href="https://twitter.com/"><i class="bx bxl-twitter"></i></a>
+                <a href="https://www.instagram.com/"><i class="bx bxl-instagram"></i></a>
+                <a href="https://www.pinterest.com/"><i class="bx bxl-pinterest"></i></a>
               </div>
               <div class="col-auto conditions-section">
                 <a href="#">privacy</a>
