--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
               <h6 class="text-white text-uppercase">Top Driving School</h6>
               <h1 class="display-3 my-4">Celebrating<br />37 years.</h1>
               <a href="#contact" class="btn btn-brand">Get Started</a>
-              <a href="About Us.html" class="btn btn-outline-light ms-3">Our Mission</a>
+              
+              </button>
             </div>
           </div>
         </div>
@@ -117,7 +118,7 @@
                 You can expect the <br />best in town.
               </h1>
               <a href="#" class="btn btn-brand">Get Started</a>
-              <a href="#" class="btn btn-outline-light ms-3">Our Mission</a>
+              
             </div>
           </div>
         </div>
