--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="col-12 text-center text-white">
               <h6 class="text-white text-uppercase">Top Driving School</h6>
               <h1 class="display-3 my-4">Celebrating<br />37 years.</h1>
-              <a href="#contact" class="btn btn-brand">Get Started</a>
+              <a href="#contact" class="btn btn-brand">Register</a>
               
               </button>
             </div>
@@ -117,7 +117,7 @@
               <h1 class="display-3 my-4">
                 You can expect the <br />best in town.
               </h1>
-              <a href="#" class="btn btn-brand">Get Started</a>
+              <a href="#" class="btn btn-brand">Register</a>
               
             </div>
           </div>
