--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
             <div class="col-12 text-center text-white">
               <h6 class="text-white text-uppercase">Top Driving School</h6>
               <h1 class="display-3 my-4">Celebrating<br />37 years.</h1>
-              <a href="#contact" class="btn btn-brand">Register</a>
-              
+              <button class="register">
+                <a href="account.html" class="floating-button"><p>Register</p></a>
               </button>
             </div>
           </div>
@@ -117,7 +117,9 @@
               <h1 class="display-3 my-4">
                 You can expect the <br />best in town.
               </h1>
-              <a href="#" class="btn btn-brand">Register</a>
+              <button class="register">
+                <a href="account.html" class="floating-button"><p>Register</p></a>
+              </button>
               
             </div>
           </div>
