--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               <h6 class="text-white text-uppercase">Top Driving School</h6>
               <h1 class="display-3 my-4">Celebrating<br />37 years.</h1>
               <button class="register">
-                <a href="account.html" class="floating-button"><p>Register</p></a>
+                <a href="account.html" class="btn bt n-outline-light ms-3"><p>Register</p></a>
               </button>
             </div>
           </div>
@@ -118,7 +118,7 @@
                 You can expect the <br />best in town.
               </h1>
               <button class="register">
-                <a href="account.html" class="floating-button"><p>Register</p></a>
+                <a href="account.html" class="btn bt n-outline-light ms-3"><p>Register</p></a>
               </button>
               
             </div>
