--- a/index.html
+++ b/index.html
@@ -95,16 +95,14 @@
     </nav>
 
 <!-- SLIDER -->
-    <div class="owl-carousel owl-theme hero-slider">
-      <div class="slide slide1">
-        <div class="container">
-          <div class="row">
-            <div class="col-12 text-center text-white">
-              <h6 class="text-white text-uppercase">Top Driving School</h6>
-              <h1 class="display-3 my-4">Celebrating<br />37 years.</h1>
-              <button class="register">
-                <a href="account.html" class="btn bt n-outline-light ms-3"><p>Register</p></a>
-              </button>
+<div class="owl-carousel owl-theme hero-slider">
+  <div class="slide slide1">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 text-center text-white">
+          <h6 class="text-white text-uppercase">Top Driving School</h6>
+          <h1 class="display-3 my-4">Celebrating<br />37 years.</h1>
+          <a href="#account" class="btn btn-brand">Register</a>
             </div>
           </div>
         </div>
@@ -117,9 +115,8 @@
               <h1 class="display-3 my-4">
                 You can expect the <br />best in town.
               </h1>
-              <button class="register">
-                <a href="account.html" class="btn bt n-outline-light ms-3"><p>Register</p></a>
-              </button>
+              <a href="#account" class="btn btn-brand">Register</a>
+             
               
             </div>
           </div>
