--- a/parents.html
+++ b/parents.html
@@ -32,10 +32,10 @@
             <p><i class="bx bxs-phone-call"></i> (608) 345-9598</p>
           </div>
           <div class="col-auto social-icons">
-            <a href="#"><i class="bx bxl-facebook"></i></a>
-            <a href="#"><i class="bx bxl-twitter"></i></a>
-            <a href="#"><i class="bx bxl-instagram"></i></a>
-            <a href="#"><i class="bx bxl-pinterest"></i></a>
+            <a href="https://www.facebook.com/MadAreaDrivingSchool"><i class="bx bxl-facebook"></i></a>
+                <a href="https://twitter.com/"><i class="bx bxl-twitter"></i></a>
+                <a href="https://www.instagram.com/"><i class="bx bxl-instagram"></i></a>
+                <a href="https://www.pinterest.com/"><i class="bx bxl-pinterest"></i></a>
           </div>
         </div>
       </div>
