--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div class="col-12 text-center text-white">
           <h6 class="text-white text-uppercase">Top Driving School</h6>
           <h1 class="display-3 my-4">Celebrating<br />37 years.</h1>
-          <a href="#account" class="btn btn-brand">Register</a>
+          <a href="account.html" class="btn btn-brand">Register</a>
             </div>
           </div>
         </div>
