--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
               <h1 class="display-3 my-4">
                 You can expect the <br />best in town.
               </h1>
-              <a href="#account" class="btn btn-brand">Register</a>
+              <a href="account.html" class="btn btn-brand">Register</a>
              
               
             </div>
